New way to evaluate fact, madatory and specific mode are now supported

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,39 @@
+/*
+ *
+ * Copyright LABGeM 2015
+ *
+ * author: Jonathan MERCIER
+ *
+ * This software is a computer program whose purpose is to annotate a complete genome.
+ *
+ * This software is governed by the CeCILL  license under French law and
+ * abiding by the rules of distribution of free software.  You can  use,
+ * modify and/ or redistribute the software under the terms of the CeCILL
+ * license as circulated by CEA, CNRS and INRIA at the following URL
+ * "http://www.cecill.info".
+ *
+ * As a counterpart to the access to the source code and  rights to copy,
+ * modify and redistribute granted by the license, users are provided only
+ * with a limited warranty  and the software's author,  the holder of the
+ * economic rights,  and the successive licensors  have only  limited
+ * liability.
+ *
+ * In this respect, the user's attention is drawn to the risks associated
+ * with loading,  using,  modifying and/or developing or reproducing the
+ * software by the user in light of its specific status of free software,
+ * that may mean  that it is complicated to manipulate,  and  that  also
+ * therefore means  that it is reserved for developers  and  experienced
+ * professionals having in-depth computer knowledge. Users are therefore
+ * encouraged to load and test the software's suitability as regards their
+ * requirements in conditions enabling the security of their systems and/or
+ * data to be ensured and,  more generally, to use and operate it in the
+ * same conditions as regards security.
+ *
+ * The fact that you are presently reading this means that you have had
+ * knowledge of the CeCILL license and that you accept its terms.
+ *
+ */
+
 import java.text.SimpleDateFormat
 
 buildscript {
@@ -34,8 +70,8 @@ repositories {
 
 dependencies {
     testCompile group: 'junit',             name: 'junit',              version: '4.11'
+    compile     group: 'org.projectlombok', name: 'lombok',             version: '1.16.6'
     compile     group: 'javax.validation',  name: 'validation-api',     version: '1.1.0.Final'
-    compile     group: 'joda-time',         name: 'joda-time',          version: '2.7'
     compile     group: 'ch.qos.logback',    name: 'logback-classic',    version: '1.1.2'
     compile     group: 'org.drools',        name: 'drools-compiler',    version: droolsVersion
     compile     group: 'org.drools',        name: 'knowledge-api',      version: droolsVersion
@@ -50,7 +86,7 @@ jar {
                     "Product-Name":                 projectName,
                     "provider":                     "Genoscope",
                     "Created-By":                   "LABGeM",
-                    "description":                  "GROOLS Application.",
+                    "relevant":                  "GROOLS Application.",
                     "Build-Date":                   new SimpleDateFormat("yyyy-MM-dd").format(new Date()),
                     "Build-JDK":                    System.getProperty("java.version"),
                     "Build-Gradle":                 project.gradle.gradleVersion
@@ -60,6 +96,9 @@ jar {
 }
 
 tasks.withType(Test) {
+    testLogging {
+        events 'started','passed'
+    }
     jvmArgs  "-Dcom.sun.management.jmxremote.port=19988", "-Dcom.sun.management.jmxremote.ssl=false", "-Dcom.sun.management.jmxremote.authenticate=false", "-Ddrools.mbeans=enabled"
 }
 tasks.withType(JavaCompile) {
