follow others upstream projects

--- a/gradle.properties
+++ b/gradle.properties
@@ -33,16 +33,15 @@
 #
 #
 theGroup                = fr.cea.ig
-theName                 = grools-checker-genome-properties
+theName                 = grools-genome-properties
 theVersion              = 3.0.0
 theCompatibility        = 1.8
 theDescription          = Grools genome properties integrator
-urlCore                 = institut-de-genomique/grools-checker-genome-properties
+urlCore                 = institut-de-genomique/grools-genome-properties-plugins
 urlBase                 = https://github.com/
 gitBase                 = scm:git@github.com:
-checkerVersion          = 3.0.0
-engineVersion		    = 0.0.1
+groolsReasonerVersion   = 1.0.0
 lombokVersion           = 1.16.6
 logbackVersion          = 1.1.2
 junitVersion            = 4.11
-igioVersion             = 0.3.0
+bioScribeVersion        = 0.3.0
