--- a/build.gradle
+++ b/build.gradle
@@ -34,11 +34,10 @@ repositories {
 
 dependencies {
     testCompile group: 'junit'              ,  name: 'junit'                    , version: junitVersion
-    testCompile group: theGroup             ,  name: 'grools-reasoner-engine'   , version: engineVersion
+    compile     group: theGroup             ,  name: 'grools-reasoner'          , version: groolsReasonerVersion
+    compile     group: theGroup             ,  name: 'bio-scribe'               , version: bioScribeVersion
     compile     group: 'ch.qos.logback'     ,  name: 'logback-classic'          , version: logbackVersion
     compile     group: 'org.projectlombok'  ,  name: 'lombok'                   , version: lombokVersion
-    compile     group: theGroup             ,  name: 'grools-checker'           , version: checkerVersion
-    compile     group: theGroup             ,  name: 'ig-io'                    , version: igioVersion
 }
 
 jar {
