--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,1 @@
-rootProject.name = 'grools-checker-genome-properties'
-//include 'checker', 'model', 'parser'
-//project(':model').projectDir = new File('parser/model')
+rootProject.name = theName
