update project name

--- a/gradle.properties
+++ b/gradle.properties
@@ -33,10 +33,10 @@
 #
 #
 theGroup                = fr.cea.ig
-theName                 = grools-genome-properties
+theName                 = grools-genome-properties-plugins
 theVersion              = 3.0.0
 theCompatibility        = 1.8
-theDescription          = Grools genome properties integrator
+theDescription          = Grools plugins to reprsent genome properties metabolic knowledge
 urlCore                 = institut-de-genomique/grools-genome-properties-plugins
 urlBase                 = https://github.com/
 gitBase                 = scm:git@github.com:
